[package]
name = "rust_bidenbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clokwerk = "0.4.0"
dotenv = "0.15.0"
env_logger = "0.10"
log = "0.4"
serenity = "0.12.0"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
